--- a/src/i18n/message/vi.json
+++ b/src/i18n/message/vi.json
@@ -77,6 +77,7 @@
     "searchPlaceholder": "Tìm theo tên, từ khóa...",
     "clear": "Xóa lọc",
     "all": "Tất cả",
+    "relatedTitle": "Gợi ý liên quan",
     "sort": {
       "order": "Thứ tự ↑",
       "-order": "Thứ tự ↓",
@@ -315,7 +316,8 @@
     "title": "Tin tức",
     "subtitle": "Những cập nhật và câu chuyện mới nhất từ Hasake Play.",
     "breadcrumb": "Trang chủ / Tin tức",
-    "readMore": "Xem thêm"
+    "readMore": "Xem thêm",
+    "relatedTitle": "Bài viết liên quan"
   },
   "projects": {
     "title": "Dự án",
@@ -360,6 +362,7 @@
       "more": "Phóng to",
       "less": "Thu gọn"
     },
+    "relatedTitle": "Dự án liên quan",
     "loadMore": "Tải thêm dự án",
     "loadingMore": "Đang tải dự án..."
   },
