--- a/src/i18n/message/en.json
+++ b/src/i18n/message/en.json
@@ -29,6 +29,7 @@
     "contactCompany": "Contact Hasake Co., Ltd.",
     "hotline": { "label": "HOTLINE" },
     "contactBoss": "Legal Representative: Hari Dass Kumar Ratna Kumar (Mr)",
+    "helpCenter": "Help Center",
     "tel": "Tel",
 
     "hcm": {
