--- a/src/i18n/message/vi.json
+++ b/src/i18n/message/vi.json
@@ -29,6 +29,7 @@
     "contactCompany": "Liên hệ Công ty TNHH Hasake",
     "hotline": { "label": "HOTLINE" },
     "contactBoss": "Người đại diện pháp luật: Hari Dass Kumar Ratna Kumar (Ông)",
+    "helpCenter": "Trung tâm hỗ trợ",
     "tel": "Điện thoại",
     "hcm": {
       "title": "Văn phòng TP. Hồ Chí Minh",
